	* texi2html.pl, texi2html.init: use the same code for file 
	name determination with NODE_FILES than with the traditional 
	scheme. node_file_name is now used only to change the node 
	file name, not for the determination of the html page file 
	name anymore.
	With this change the top file isn't necessarily index.html, 
	even if it is the node_file_name it is index.html only if 
	explicitly set.
	* Tests/*: Regenerate
	* NEWS, doc/*: document the api node_file_name api change

2006-08-04  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: fixes for split indices.
	Fix detection of allready present heading.
	Don't split top element accross pages because of split indices.
	Simplify the file name determination.
	* Tests/*: add a test case for split indices in chapter
	and more tests for split indices.
	Put index_nodes result in a directory.
	Regenerate.

2006-06-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: Accept empty value set by @set (bug #16774).
	Don't eat the line after a macro without arg (bug #16773).
	* Tests/*: test for those issues.

2006-05-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: rework image formatting,
	more is done in the formatting functions.
	Redundancy between menu entry and menu description is 
	handled in the formatting functions.
	* texi2html.pl:
	Close correctly the @-commands in pass_structure.
	Remove unneeded error messages for formats not matching when
	it cannot happen.
	Use the same element in menu description and menu links.
	Try to close paragraph when searching for the right format
	to close.
	Remove unclosed accent commands from the 'command_stack'.
	Indentation fixes.
	* T2h_l2h.pm: use the document name in the perl cache name.
	* Tests/*: more tests for unclosed @-commands.

2006-05-17  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: teletype style is set in 
	table item formatting in texi2html.init, not in the main
	program.